--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  collection: ^1.19.1
+  flame: ^1.28.0
+  flame_audio: ^2.11.4
+  flame_tiled: ^3.0.1
+  flame_jenny: ^1.0.0
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flame_lint: ^1.3.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -58,8 +64,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/audio/
+    - assets/tiled/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
