--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,16 @@ dependencies:
   equatable: ^2.0.7
   flutter_bloc: ^9.1.0
   google_fonts: ^6.2.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flame_lint: ^1.3.0
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  hive_generator: ^2.0.1
 
 flutter:
   uses-material-design: true
