--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ flutter:
   uses-material-design: true
 
   assets:
+
     - assets/images/
+    - assets/images/monster/
     - assets/tiles/
     - assets/audio/sfx/
     - assets/audio/music/
